# rust-api-server

./: Cargo.toml  README.md
migrations/: 20260207200119_create_users_table.sql
src/: errors.rs  main.rs  utils.rs
src/controllers/: api.rs  auth.rs
src/db/: users.rs
src/middleware/: auth.rs
