[package]
name = "cultists-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
argon2 = "0.5.3"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
